# altair

./: .dockerignore  Dockerfile  LICENSE.txt  README.md  fly.toml  pyproject.toml
.github/workflows/: deploy.yaml
src/: Dockerfile
src/altair/: __about__.py  __init__.py  bot.py  config.py  log.py  post.py  repo.py  secrets.py  webhook.py
